fixes #12. Allow scrolling when mouse cursor is above the custom scrollbar area - use pointer-events:none, and respond to clicks from the outer-container by checking their position.

--- a/src/main/cs.scss
+++ b/src/main/cs.scss
@@ -48,6 +48,7 @@
     padding: 6px 0;
     box-sizing: border-box;
     will-change: opacity;
+    pointer-events: none;
   }
 
   &.scroll-handle-dragged .custom-scrollbar {
